# uphold-challenge

./: CMakeLists.txt  README.md  googleBenchMark.cpp  googleTest.cpp  solution.cpp  solution1.cpp  solution1.h  solution2.cpp  solution2.h  solution3.cpp  solution3.h  solution4.cpp  solution4.h
